--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "touchguild": "1.3.1-dev.5eedeed",
+    "touchguild": "^1.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
